--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-map-gl": "^7.1.7",
     "react-qr-code": "^2.0.15"
   },
