--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4 # Update to the latest version
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # Use the default GitHub token
+          github_token: ${{ secrets.MY_GITHUB_TOKEN }} # Use the default GitHub token
           publish_dir: ./dist # Directory to publish
