--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.0",
+    "@chakra-ui/react": "^2.10.2",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "chakra-react-select": "^4.9.1",
-    "framer-motion": "^11.3.28",
+    "firebase": "^10.14.1",
+    "framer-motion": "^11.11.8",
     "jspdf": "^2.5.1",
     "mapbox-gl": "^3.7.0",
     "pdf-lib": "^1.17.1",
